--- a/src/main/resources/templates/update_request.html
+++ b/src/main/resources/templates/update_request.html
@@ -40,6 +40,7 @@
                 <h3>Active status: <span th:text="*{statusReq}"></span></h3>
             </td>
             <input type="hidden" name="page_now" th:value="${page}">
+            <input type="hidden" name="size" th:value="5">
             <td><input type="submit" name="submit" value="Update request"/></td>
         </form>
     </tr>
