--- a/src/main/resources/templates/plugins/menu.html
+++ b/src/main/resources/templates/plugins/menu.html
@@ -12,7 +12,7 @@
     <a th:href="@{/}">- Index - </a>
 </span>
     <span>
-    <a th:href="@{/request/get_all}"> - All requests - </a>
+    <a th:href="@{/request/}"> - All requests - </a>
 </span>
 </div>
 
