--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -51,10 +51,10 @@
         <summary>Create New Request</summary>
         <p>Write Parameters:</p>
         <input type="hidden" th:name="statusReq" value="IN_PROCESSING"/>
-        <div><input type="email" th:name="user_email" placeholder="Email User">Email User</div>
-        <div><input type="text" th:name="course_title" placeholder="Title course">Title course</div>
+        <div><input type="email" th:name="user.email" placeholder="Email User">Email User</div>
+        <div><input type="text" th:name="course.title" placeholder="Title course">Title course</div>
         <div><input type="submit" th:name="submit" value="Create request"/></div>
-        <input type="hidden" name="page_now" th:value="${page}">
+        <input type="hidden" name="page" th:value="${page}">
         <input type="hidden" name="size" th:value="${requests.size}">
     </details>
 </form>
