LMS-6: Modify Menu & Pagination for Page object

--- a/src/main/resources/templates/plugins/menu.html
+++ b/src/main/resources/templates/plugins/menu.html
@@ -12,7 +12,7 @@
     <a th:href="@{/}">- Index - </a>
 </span>
     <span>
-    <a th:href="@{/request/}"> - All requests - </a>
+    <a th:href="@{/requests?page=0&size=5&sort=id,asc}"> - All requests - </a>
 </span>
 </div>
 
