--- a/src/main/resources/templates/plugins/pagination.html
+++ b/src/main/resources/templates/plugins/pagination.html
@@ -8,22 +8,22 @@
 <body>
 <div th:fragment="pagination_fr">
 <span th:if="${not firstVer.first AND firstVer.totalPages > 0}">
-    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=1)}">First </a>
+    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page = 0)}">First </a>
 </span>
     <span th:if="${not firstVer.first AND firstVer.totalPages > 0}">
-    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.number})}"><-- Previous</a>
+    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.number - 1})}"><-- Previous</a>
 </span>
     <span th:if="${firstVer.totalPages > 0}"
-          th:each="pageNumber : ${pageNumbers}">
+          th:each="pageNumber : ${#numbers.sequence(0, firstVer.getTotalPages - 1, 1)}">
     <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${pageNumber})}"
-       th:text=${pageNumber}
+       th:text="${pageNumber} + 1"
        th:class="${pageNumber==firstVer.number + 1} ? active"></a>
 </span>
     <span th:if="${not firstVer.last AND firstVer.totalPages > 0}">
-    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.number + 2})}">Next --></a>
+    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.number + 1})}">Next --></a>
 </span>
     <span th:if="${not firstVer.last AND firstVer.totalPages > 0}">
-    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.totalPages})}"> Last</a>
+    <a th:href="@{__${#ctx.springRequestContext.requestUri}__(size=${firstVer.size}, page=${firstVer.totalPages - 1})}"> Last</a>
 </span>
 </div>
 </body>
