LMS-6: Correct end empty string

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <h1>Start page</h1>
 
 <span>
-    <a th:href="@{/request/}"> - All requests - </a>
+    <a th:href="@{/requests}"> - All requests - </a>
 </span>
 
 </body>
