--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -13,8 +13,8 @@
 
 <div>
     <span>Size requests on page</span>
-    <select th:onchange="'window.location.href = \'' + @{/request/} + '?size=\' + this.value ' ">
-        <option th:text="@{Now: __${requests.size}__}"></option>
+    <select th:onchange="'window.location.href = \'' + @{/requests?sort=id,asc} + '&size=\' + this.value'">
+        <option th:text="@{Now: __${requests.getSize}__}"></option>
         <option th:text="3"></option>
         <option th:text="5"></option>
         <option th:text="7"></option>
@@ -33,10 +33,10 @@
     <tr th:each="request : ${requests}" th:object="${request}">
         <td th:text="*{id}"></td>
         <td th:text="*{course.title}"></td>
-        <td th:text="*{user.email}"></td>
-        <td th:text="*{statusReq}"></td>
+        <td th:text="*{user.lastName}"></td>
+        <td th:text="*{status}"></td>
         <td>
-            <form th:action="@{/request/__*{id}__?size=__${requests.size}__}" method="get">
+            <form th:action="@{/requests/__*{id}__}" method="get">
                 <input type="submit" value="Change request"/>
             </form>
         </td>
@@ -44,13 +44,12 @@
 </table>
 
 <div th:insert="~{/plugins/pagination :: pagination_fr}"
-     th:with="firstVer=${requests}, pageNumbers=${pageNumbers}"></div>
+     th:with="firstVer=${requests}"></div>
 
-<form th:action="@{/request/}" method="post">
+<form method="post">
     <details>
         <summary>Create New Request</summary>
         <p>Write Parameters:</p>
-        <input type="hidden" th:name="statusReq" value="IN_PROCESSING"/>
         <div><input type="email" th:name="user.email" placeholder="Email User">Email User</div>
         <input type="hidden" th:name="user.password" th:value="Test">
         <input type="hidden" th:name="user.firstName" th:value="Test_F">
@@ -58,11 +57,10 @@
         <input type="hidden" th:name="user.patronymicName" th:value="Test_P">
         <input type="hidden" th:name="user.contactPreferences" th:value="VIBER">
         <input type="hidden" th:name="user.socialMedia" th:value="tel">
-        <!--        <input type="hidden" th:name="user.role" th:value="USER">-->
         <div><input type="text" th:name="course.title" placeholder="Title course">Title course</div>
         <div><input type="submit" th:name="submit" value="Create request"/></div>
-        <input type="hidden" name="page" th:value="${page}">
-        <input type="hidden" name="size" th:value="${requests.size}">
+        <input type="hidden" name="page" th:value="${requests.getPageable.getPageNumber}">
+        <input type="hidden" name="size" th:value="${requests.getSize}">
     </details>
 </form>
 
