LMS-6: Change for new RequestDtoForUpdate

--- a/src/main/resources/templates/request_by_id.html
+++ b/src/main/resources/templates/request_by_id.html
@@ -14,33 +14,15 @@
 <table>
     <tr>
         <th>Course</th>
-        <th>User:
-        <th>email</th>
-        <th>firstName</th>
-        <th>lastName</th>
-        <th>patronymicName</th>
-        <th>contactPreferences</th>
-        <th>socialMedia</th>
-        <th>role</th>
-        </th>
         <th>Status</th>
     </tr>
     <tr th:object="${request}">
         <td th:text="*{course.title}"></td>
-        <td>
-        <td th:text="*{user.email}">
-        <td th:text="*{user.firstName}"></td>
-        <td th:text="*{user.lastName}"></td>
-        <td th:text="*{user.patronymicName}"></td>
-        <td th:text="*{user.contactPreferences}"></td>
-        <td th:text="*{user.socialMedia}"></td>
-        <td th:text="*{user.role}"></td>
-        </td>
-        <td th:text="*{statusReq}"></td>
+        <td th:text="*{status}"></td>
     </tr>
 </table>
 
-<form th:action="@{/request/update_form/__${request.id}__?size=__${size}__&page=__${page}__}" method="get">
+<form th:action="@{/requests/update_form/__${request.id}__}" method="get">
     <input type="submit" value="Update Book"/>
 </form>
 <a href="#" onclick="history.back();return false;" class="history-back">
