--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -3,66 +3,29 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Request</title>
+    <title>Request by id</title>
 </head>
 <body>
 
 <div th:insert="~{/plugins/menu :: menu_fr}"></div>
 
-<H1>Requests</H1>
-
-<div>
-    <span>Size requests on page</span>
-    <select th:onchange="'window.location.href = \'' + @{/requests?sort=id,asc} + '&size=\' + this.value'">
-        <option th:text="@{Now: __${requests.getSize}__}"></option>
-        <option th:text="3"></option>
-        <option th:text="5"></option>
-        <option th:text="7"></option>
-        <option th:text="15"></option>
-    </select>
-</div>
+<h1>Request number: <span th:text="${request.id}"></span></h1>
 
 <table>
     <tr>
-        <th>id</th>
-        <th>courses</th>
-        <th>users</th>
-        <th>status</th>
+        <th>Course</th>
+        <th>Status</th>
     </tr>
-
-    <tr th:each="request : ${requests}" th:object="${request}">
-        <td th:text="*{id}"></td>
+    <tr th:object="${request}">
         <td th:text="*{course.title}"></td>
-        <td th:text="*{user.lastName}"></td>
         <td th:text="*{status}"></td>
-        <td>
-            <form th:action="@{/requests/__*{id}__}" method="get">
-                <input type="submit" value="Change request"/>
-            </form>
-        </td>
     </tr>
 </table>
 
-<div th:insert="~{/plugins/pagination :: pagination_fr}"
-     th:with="firstVer=${requests}"></div>
-
-<form method="post">
-    <details>
-        <summary>Create New Request</summary>
-        <p>Write Parameters:</p>
-        <div><input type="email" th:name="user.email" placeholder="Email User">Email User</div>
-        <input type="hidden" th:name="user.password" th:value="Test">
-        <input type="hidden" th:name="user.firstName" th:value="Test_F">
-        <input type="hidden" th:name="user.lastName" th:value="Test_L">
-        <input type="hidden" th:name="user.patronymicName" th:value="Test_P">
-        <input type="hidden" th:name="user.contactPreferences" th:value="VIBER">
-        <input type="hidden" th:name="user.socialMedia" th:value="tel">
-        <div><input type="text" th:name="course.title" placeholder="Title course">Title course</div>
-        <div><input type="submit" th:name="submit" value="Create request"/></div>
-        <input type="hidden" name="page" th:value="${requests.getPageable.getPageNumber}">
-        <input type="hidden" name="size" th:value="${requests.getSize}">
-    </details>
+<form th:action="@{/requests/update_form/__${request.id}__}" method="get">
+    <input type="submit" value="Update Book"/>
 </form>
-
+<a href="#" onclick="history.back();return false;" class="history-back">
+    <-Back</a>
 </body>
 </html>
