--- a/src/main/resources/templates/create_request.html
+++ b/src/main/resources/templates/create_request.html
@@ -13,21 +13,18 @@
     <h1>Create</h1>
     <h2>Request</h2>
 </div>
-<div class="main-area">
 
+<div class="main-area">
     <form method="post">
-        <p>Write Parameters:</p>
-        <div><input type="email" th:name="user.email" placeholder="Email User">Email User</div>
-        <input type="hidden" th:name="user.password" th:value="Test">
-        <input type="hidden" th:name="user.firstName" th:value="Test_F">
-        <input type="hidden" th:name="user.lastName" th:value="Test_L">
-        <input type="hidden" th:name="user.patronymicName" th:value="Test_P">
-        <input type="hidden" th:name="user.contactPreferences" th:value="VIBER">
-        <input type="hidden" th:name="user.socialMedia" th:value="tel">
-        <div><input type="text" th:name="course.title" placeholder="Title course">Title course</div>
-        <div><input type="submit" th:name="submit" value="Create request"/></div>
-        <input type="hidden" name="page" th:value="${requests.getPageable.getPageNumber}">
-        <input type="hidden" name="size" th:value="${requests.getSize}">
+        <ul>
+            <li>
+                <input type="text" th:name="user.id" placeholder="Enter user id">
+            </li>
+            <li><input type="text" th:name="course.id" placeholder="Enter course id">
+            </li>
+            <li>PROCESSING</li>
+        </ul>
+        <input type="submit" name="submit" value="Edit request"/>
     </form>
 </div>
 </body>
