--- a/src/main/resources/templates/create_request.html
+++ b/src/main/resources/templates/create_request.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create request</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
