--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-<h1>Sorry, Error...</h1>
+<h1 class="header">Sorry, Error...</h1>
 <h3 th:text="${message} == null ? 'Something went wrong...' : ${message}"></h3>
 <a href="#" onclick="history.back();return false;" class="history-back">
     <-Back</a>
