--- a/src/main/resources/templates/requests.html
+++ b/src/main/resources/templates/requests.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Requests</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
 <nav th:replace="~{/plugins/menu :: menu}"></nav>
 
 <div class="left-side-area">
-    <h1>Show</h1>
+    <h1 class="header">Show</h1>
     <h2>Requests</h2>
-    <h3><a th:href="@{/requests/create}">Create request</a></h3>
+    <h3><a th:href="@{/requests/create}" class="button">Create request</a></h3>
 </div>
 <div class="main-area">
     <div>
@@ -26,8 +27,8 @@
         </select>
     </div>
 
-    <table>
-        <tr>
+    <table class="table">
+        <tr class="table-header">
             <th>View</th>
             <th>Change</th>
             <th>Delete</th>
@@ -36,12 +37,13 @@
             <th>Status</th>
             <th>Actions</th>
         </tr>
-        <tr th:each="request : ${requests}" th:object="${request}">
-            <td><a th:href="@{/requests/__*{id}__}">View</a></td>
-            <td><a th:href="@{/requests/update/__*{id}__}">Change</a></td>
+        <tr th:each="request : ${requests}" th:object="${request}" class="table-data">
+            <td><a th:href="@{/requests/__*{id}__}" class="button">View</a></td>
+            <td><a th:href="@{/requests/update/__*{id}__}" class="button">Change</a></td>
             <td></td>
-            <td th:text="*{user.firstName} + ' ' + *{user.lastName}"><a th:href="@{/users/__*{id}__}">User</a></td>
-            <td><a th:href="@{/courses/__*{id}__}" th:text="*{course.title}">Course title</a></td>
+            <td th:text="*{user.firstName} + ' ' + *{user.lastName}"><a th:href="@{/users/__*{id}__}" class="button">User</a>
+            </td>
+            <td><a th:href="@{/courses/__*{id}__}" th:text="*{course.title}" class="button">Course title</a></td>
             <td th:text="*{status}"></td>
             <td></td>
         </tr>
